src/org/stringtemplate/v4/compiler/generated/STParser.ts
// Generated from src/org/stringtemplate/v4/compiler/STParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


// cspell: disable

import { ErrorManager } from "../../misc/ErrorManager.js";
import { STLexer } from "../STLexer.js";
import { Compiler } from "../Compiler.js";
import { ErrorType } from "../../misc/ErrorType.js";


export class STParser extends antlr.Parser {
    public static readonly RBRACK = 17;
    public static readonly LBRACK = 16;
    public static readonly ELSE = 5;
    public static readonly ELLIPSIS = 11;
    public static readonly LCURLY = 20;
    public static readonly BANG = 10;
    public static readonly EQUALS = 12;
    public static readonly TEXT = 22;
    public static readonly ID = 25;
    public static readonly SEMI = 9;
    public static readonly LPAREN = 14;
    public static readonly IF = 4;
    public static readonly ELSEIF = 6;
    public static readonly COLON = 13;
    public static readonly RPAREN = 15;
    public static readonly WS = 27;
    public static readonly COMMA = 18;
    public static readonly RCURLY = 21;
    public static readonly ENDIF = 7;
    public static readonly RDELIM = 24;
    public static readonly SUPER = 8;
    public static readonly DOT = 19;
    public static readonly LDELIM = 23;
    public static readonly STRING = 26;
    public static readonly PIPE = 28;
    public static readonly OR = 29;
    public static readonly AND = 30;
    public static readonly INDENT = 31;
    public static readonly NEWLINE = 32;
    public static readonly AT = 33;
    public static readonly END = 34;
    public static readonly TRUE = 35;
    public static readonly FALSE = 36;
    public static readonly COMMENT = 37;
    public static readonly SLASH = 38;
    public static readonly EXPR = 39;
    public static readonly OPTIONS = 40;
    public static readonly PROP = 41;
    public static readonly PROP_IND = 42;
    public static readonly INCLUDE = 43;
    public static readonly INCLUDE_IND = 44;
    public static readonly EXEC_FUNC = 45;
    public static readonly INCLUDE_SUPER = 46;
    public static readonly INCLUDE_SUPER_REGION = 47;
    public static readonly INCLUDE_REGION = 48;
    public static readonly TO_STR = 49;
    public static readonly LIST = 50;
    public static readonly MAP = 51;
    public static readonly ZIP = 52;
    public static readonly SUBTEMPLATE = 53;
    public static readonly ARGS = 54;
    public static readonly ELEMENTS = 55;
    public static readonly REGION = 56;
    public static readonly NULL = 57;
    public static readonly INDENTED_EXPR = 58;
    public static readonly RULE_templateAndEOF = 0;
    public static readonly RULE_template = 1;
    public static readonly RULE_element = 2;
    public static readonly RULE_singleElement = 3;
    public static readonly RULE_compoundElement = 4;
    public static readonly RULE_exprTag = 5;
    public static readonly RULE_region = 6;
    public static readonly RULE_subtemplate = 7;
    public static readonly RULE_ifstat = 8;
    public static readonly RULE_conditional = 9;
    public static readonly RULE_andConditional = 10;
    public static readonly RULE_notConditional = 11;
    public static readonly RULE_notConditionalExpr = 12;
    public static readonly RULE_exprOptions = 13;
    public static readonly RULE_option = 14;
    public static readonly RULE_exprNoComma = 15;
    public static readonly RULE_expr = 16;
    public static readonly RULE_mapExpr = 17;
    public static readonly RULE_mapTemplateRef = 18;
    public static readonly RULE_memberExpr = 19;
    public static readonly RULE_includeExpr = 20;
    public static readonly RULE_primary = 21;
    public static readonly RULE_qualifiedId = 22;
    public static readonly RULE_args = 23;
    public static readonly RULE_argExprList = 24;
    public static readonly RULE_arg = 25;
    public static readonly RULE_namedArg = 26;
    public static readonly RULE_list = 27;
    public static readonly RULE_listElement = 28;

    public static readonly literalNames = [
        null, null, null, null, "'if'", "'else'", "'elseif'", "'endif'", 
        "'super'", "';'", "'!'", "'...'", "'='", "':'", "'('", "')'", "'['", 
        "']'", "','", "'.'", "'{'", "'}'", null, null, null, null, null, 
        null, "'|'", "'||'", "'&&'", null, null, "'@'", "'@end'", null, 
        null, null, "'/'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, "IF", "ELSE", "ELSEIF", "ENDIF", "SUPER", 
        "SEMI", "BANG", "ELLIPSIS", "EQUALS", "COLON", "LPAREN", "RPAREN", 
        "LBRACK", "RBRACK", "COMMA", "DOT", "LCURLY", "RCURLY", "TEXT", 
        "LDELIM", "RDELIM", "ID", "STRING", "WS", "PIPE", "OR", "AND", "INDENT", 
        "NEWLINE", "AT", "END", "TRUE", "FALSE", "COMMENT", "SLASH", "EXPR", 
        "OPTIONS", "PROP", "PROP_IND", "INCLUDE", "INCLUDE_IND", "EXEC_FUNC", 
        "INCLUDE_SUPER", "INCLUDE_SUPER_REGION", "INCLUDE_REGION", "TO_STR", 
        "LIST", "MAP", "ZIP", "SUBTEMPLATE", "ARGS", "ELEMENTS", "REGION", 
        "NULL", "INDENTED_EXPR"
    ];
    public static readonly ruleNames = [
        "templateAndEOF", "template", "element", "singleElement", "compoundElement", 
        "exprTag", "region", "subtemplate", "ifstat", "conditional", "andConditional", 
        "notConditional", "notConditionalExpr", "exprOptions", "option", 
        "exprNoComma", "expr", "mapExpr", "mapTemplateRef", "memberExpr", 
        "includeExpr", "primary", "qualifiedId", "args", "argExprList", 
        "arg", "namedArg", "list", "listElement",
    ];

    public get grammarFileName(): string { return "STParser.g4"; }
    public get literalNames(): (string | null)[] { return STParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return STParser.symbolicNames; }
    public get ruleNames(): string[] { return STParser.ruleNames; }
    public get serializedATN(): number[] { return STParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }


    private errMgr: ErrorManager;
    private templateToken: Token;

    /*
    public constructor(input: antlr.TokenStream, errMgr: ErrorManager, templateToken: antlr.Token) {
    	super(input);
    	this.errMgr = errMgr;
    	this.templateToken = templateToken;
    }*/

    /*
    protected recoverFromMismatchedToken(input: antlr.IntStream, ttype: number, follow: antlr.BitSet): void {
    	throw new antlr.NoViableAltException(this, input);
    } */

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, STParser._ATN, STParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public templateAndEOF(): TemplateAndEOFContext {
        let localContext = new TemplateAndEOFContext(this.context, this.state);
        this.enterRule(localContext, 0, STParser.RULE_templateAndEOF);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 58;
            this.template();
            this.state = 59;
            this.match(STParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public template(): TemplateContext {
        let localContext = new TemplateContext(this.context, this.state);
        this.enterRule(localContext, 2, STParser.RULE_template);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 64;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 61;
                    this.element();
                    }
                    }
                }
                this.state = 66;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public element(): ElementContext {
        let localContext = new ElementContext(this.context, this.state);
        this.enterRule(localContext, 4, STParser.RULE_element);
        let _la: number;
        try {
            this.state = 77;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 2, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 67;
                if (!(this.inputStream.LT(1)!.column === 0)) {
                    throw this.createFailedPredicateException("this.inputStream.LT(1)!.column === 0");
                }
                this.state = 69;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 31) {
                    {
                    this.state = 68;
                    this.match(STParser.INDENT);
                    }
                }

                this.state = 71;
                this.match(STParser.COMMENT);
                this.state = 72;
                this.match(STParser.NEWLINE);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 73;
                this.match(STParser.INDENT);
                this.state = 74;
                this.singleElement();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 75;
                this.singleElement();
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 76;
                this.compoundElement();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public singleElement(): SingleElementContext {
        let localContext = new SingleElementContext(this.context, this.state);
        this.enterRule(localContext, 6, STParser.RULE_singleElement);
        try {
            this.state = 83;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case STParser.LDELIM:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 79;
                this.exprTag();
                }
                break;
            case STParser.TEXT:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 80;
                this.match(STParser.TEXT);
                }
                break;
            case STParser.NEWLINE:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 81;
                this.match(STParser.NEWLINE);
                }
                break;
            case STParser.COMMENT:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 82;
                this.match(STParser.COMMENT);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public compoundElement(): CompoundElementContext {
        let localContext = new CompoundElementContext(this.context, this.state);
        this.enterRule(localContext, 8, STParser.RULE_compoundElement);
        try {
            this.state = 87;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 85;
                this.ifstat();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 86;
                this.region();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public exprTag(): ExprTagContext {
        let localContext = new ExprTagContext(this.context, this.state);
        this.enterRule(localContext, 10, STParser.RULE_exprTag);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 89;
            this.match(STParser.LDELIM);
            this.state = 90;
            this.expr();
            this.state = 93;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 91;
                this.match(STParser.SEMI);
                this.state = 92;
                this.exprOptions();
                }
            }

            this.state = 95;
            this.match(STParser.RDELIM);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public region(): RegionContext {
        let localContext = new RegionContext(this.context, this.state);
        this.enterRule(localContext, 12, STParser.RULE_region);
        let indent: Token | null | undefined;
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 98;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 97;
                localContext._i = this.match(STParser.INDENT);
                }
            }

            this.state = 100;
            localContext._x = this.match(STParser.LDELIM);
            this.state = 101;
            this.match(STParser.AT);
            this.state = 102;
            this.match(STParser.ID);
            this.state = 103;
            this.match(STParser.RDELIM);
            if (this.inputStream.LA(1) != STLexer.NEWLINE) indent=localContext?._i;
            this.state = 105;
            this.template();
            this.state = 107;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 106;
                this.match(STParser.INDENT);
                }
            }

            this.state = 109;
            this.match(STParser.LDELIM);
            this.state = 110;
            this.match(STParser.END);
            this.state = 111;
            this.match(STParser.RDELIM);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public subtemplate(): SubtemplateContext {
        let localContext = new SubtemplateContext(this.context, this.state);
        this.enterRule(localContext, 14, STParser.RULE_subtemplate);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 113;
            localContext._lc = this.match(STParser.LCURLY);
            this.state = 123;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 9, this.context) ) {
            case 1:
                {
                this.state = 114;
                localContext._ID = this.match(STParser.ID);
                localContext._ids.push(localContext._ID);
                this.state = 119;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 18) {
                    {
                    {
                    this.state = 115;
                    this.match(STParser.COMMA);
                    this.state = 116;
                    localContext._ID = this.match(STParser.ID);
                    localContext._ids.push(localContext._ID);
                    }
                    }
                    this.state = 121;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 122;
                this.match(STParser.PIPE);
                }
                break;
            }
            this.state = 125;
            this.template();
            this.state = 127;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 126;
                this.match(STParser.INDENT);
                }
            }

            this.state = 129;
            this.match(STParser.RCURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifstat(): IfstatContext {
        let localContext = new IfstatContext(this.context, this.state);
        this.enterRule(localContext, 16, STParser.RULE_ifstat);
        let indent: Token | null | undefined;
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 132;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 131;
                localContext._i = this.match(STParser.INDENT);
                }
            }

            this.state = 134;
            this.match(STParser.LDELIM);
            this.state = 135;
            this.match(STParser.IF);
            this.state = 136;
            this.match(STParser.LPAREN);
            this.state = 137;
            localContext._c1 = this.conditional();
            this.state = 138;
            this.match(STParser.RPAREN);
            this.state = 139;
            this.match(STParser.RDELIM);
            if (this.inputStream.LA(1) != STLexer.NEWLINE) indent=localContext?._i;
            this.state = 141;
            localContext._t1 = this.template();
            this.state = 155;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 143;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    if (_la === 31) {
                        {
                        this.state = 142;
                        this.match(STParser.INDENT);
                        }
                    }

                    this.state = 145;
                    this.match(STParser.LDELIM);
                    this.state = 146;
                    this.match(STParser.ELSEIF);
                    this.state = 147;
                    this.match(STParser.LPAREN);
                    this.state = 148;
                    localContext._conditional = this.conditional();
                    localContext._c2.push(localContext._conditional);
                    this.state = 149;
                    this.match(STParser.RPAREN);
                    this.state = 150;
                    this.match(STParser.RDELIM);
                    this.state = 151;
                    localContext._template = this.template();
                    localContext._t2.push(localContext._template);
                    }
                    }
                }
                this.state = 157;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            }
            this.state = 165;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 15, this.context) ) {
            case 1:
                {
                this.state = 159;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                if (_la === 31) {
                    {
                    this.state = 158;
                    this.match(STParser.INDENT);
                    }
                }

                this.state = 161;
                this.match(STParser.LDELIM);
                this.state = 162;
                this.match(STParser.ELSE);
                this.state = 163;
                this.match(STParser.RDELIM);
                this.state = 164;
                localContext._t3 = this.template();
                }
                break;
            }
            this.state = 168;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 31) {
                {
                this.state = 167;
                this.match(STParser.INDENT);
                }
            }

            this.state = 170;
            localContext._endif = this.match(STParser.LDELIM);
            this.state = 171;
            this.match(STParser.ENDIF);
            this.state = 172;
            this.match(STParser.RDELIM);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public conditional(): ConditionalContext {
        let localContext = new ConditionalContext(this.context, this.state);
        this.enterRule(localContext, 18, STParser.RULE_conditional);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 174;
            this.andConditional();
            this.state = 179;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 29) {
                {
                {
                this.state = 175;
                this.match(STParser.OR);
                this.state = 176;
                this.andConditional();
                }
                }
                this.state = 181;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public andConditional(): AndConditionalContext {
        let localContext = new AndConditionalContext(this.context, this.state);
        this.enterRule(localContext, 20, STParser.RULE_andConditional);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 182;
            this.notConditional();
            this.state = 187;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 30) {
                {
                {
                this.state = 183;
                this.match(STParser.AND);
                this.state = 184;
                this.notConditional();
                }
                }
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public notConditional(): NotConditionalContext {
        let localContext = new NotConditionalContext(this.context, this.state);
        this.enterRule(localContext, 22, STParser.RULE_notConditional);
        try {
            this.state = 193;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 19, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 190;
                this.match(STParser.BANG);
                this.state = 191;
                this.notConditional();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 192;
                this.memberExpr();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public notConditionalExpr(): NotConditionalExprContext {
        let localContext = new NotConditionalExprContext(this.context, this.state);
        this.enterRule(localContext, 24, STParser.RULE_notConditionalExpr);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 195;
            this.match(STParser.ID);
            this.state = 205;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 19) {
                {
                this.state = 203;
                this.errorHandler.sync(this);
                switch (this.interpreter.adaptivePredict(this.tokenStream, 20, this.context) ) {
                case 1:
                    {
                    this.state = 196;
                    localContext._p = this.match(STParser.DOT);
                    this.state = 197;
                    localContext._prop = this.match(STParser.ID);
                    }
                    break;
                case 2:
                    {
                    this.state = 198;
                    localContext._p = this.match(STParser.DOT);
                    this.state = 199;
                    this.match(STParser.LPAREN);
                    this.state = 200;
                    this.mapExpr();
                    this.state = 201;
                    this.match(STParser.RPAREN);
                    }
                    break;
                }
                }
                this.state = 207;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public exprOptions(): ExprOptionsContext {
        let localContext = new ExprOptionsContext(this.context, this.state);
        this.enterRule(localContext, 26, STParser.RULE_exprOptions);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 208;
            this.option();
            this.state = 213;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 18) {
                {
                {
                this.state = 209;
                this.match(STParser.COMMA);
                this.state = 210;
                this.option();
                }
                }
                this.state = 215;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                localContext.exception = re;
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public option(): OptionContext {
        let localContext = new OptionContext(this.context, this.state);
        this.enterRule(localContext, 28, STParser.RULE_option);

        	const id = this.inputStream.LT(1)!.text!;
        	const defVal = Compiler.defaultOptionValues.get(id);
        	const validOption = Compiler.supportedOptions.get(id) != null;

        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 216;
            localContext._ID = this.match(STParser.ID);

            		if (!validOption) {
                        this.errMgr.compileTimeError(ErrorType.NO_SUCH_OPTION, this.templateToken, localContext?._ID, (localContext._ID?.text ?? ''));
            		}
            		
            this.state = 221;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case STParser.EQUALS:
                {
                this.state = 218;
                this.match(STParser.EQUALS);
                this.state = 219;
                this.exprNoComma();
                }
                break;
            case STParser.COMMA:
            case STParser.RDELIM:
                {
